# mnemos-bridge-crewai

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/mnemos_bridge_crewai/: __init__.py  adapter.py  tool_factory.py
tests/: test_adapter_offline.py  test_tool_factory_offline.py
tests/integration/: test_crewai_crew.py  test_crewai_crew_kickoff.py
