[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mnemos-bridge-crewai"
version = "0.1.0"
description = "CrewAI adapter for MNEMOS MCP tools."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "mnemos-bridge-core>=0.1.0",
    "crewai>=0.80",
    "pydantic>=2.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.hatch.build]
package-dir = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemos_bridge_crewai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
